Fixes for map spinner visibility
There were cases where map spinner was not visible before map layer was changed.

Added higher z-index than leaflet uses (max 650) for custom map elements to show them always above
leaflet's overlays.

Moved initialization of loading observable to onInit since that guarantees it
is available when map component is rendered.

--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -4,6 +4,6 @@
 $mat-body-font-size-base: rem(1.400) !default;
 $mat-font-family: Roboto, 'Helvetica Neue', sans-serif !default;
 
-$map-spinner: 401;
-$map-controls: 402;
-$bottom-bar-z: 403;
+$map-spinner: 701;
+$map-controls: 702;
+$bottom-bar-z: 703;
